# wesign_sdk

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/wesign_sdk/: __about__.py  __init__.py  models.py  recipient_meta_info.py  sdk.py  test_sdk.py
src/wesign_sdk/custom_exceptions/: custom_exceptions.py
tests/: test_sdk.py
